| Bug #24470 | MySQL Servers crashes during creating new tables with blob column | ||
|---|---|---|---|
| Submitted: | 21 Nov 2006 13:20 | Modified: | 6 Dec 2006 11:47 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1.14-bk | OS: | Linux (FC4) |
| Assigned to: | Martin Skold | Target Version: | |
[21 Nov 2006 13:20]
Serge Kozlov
[21 Nov 2006 13:21]
Serge Kozlov
testcase
Attachment: ndb_1.test.tar.gz (application/gzip, text), 324 bytes.
[27 Nov 2006 11:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/15836 ChangeSet@1.2325, 2006-11-27 11:49:43+01:00, mskold@mysql.com +1 -0 bug#24470 MySQL Servers crashes during creating new tables with blob column: fix of error handling at resource shortage
[6 Dec 2006 11:47]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.14 changelog.
