bug#24470  MySQL Servers crashes during creating new tables with blob column: fix of error handling at resource shortage